--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <ul>
   <div style="background-color:">
   <h1>목차</h1>
-<li><a href="MyDiary.html">
+<li><a href="index1.html">
 <h3>내 하루</h3>
 </a></li>
-<li><a href="Schedule.html">
+<li><a href="index2.html">
 <h3>내 일정</h3>
 </a></li>
-<li><a href="Study.html">
+<li><a href="index3.html">
 <h3>내 공부</h3>
 </a></li>
 
